# turtle

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md.in  README.txt  cmake_install.cmake  turtle.cbp
.github/: AUTHORS.txt  FUNDING.yml  README.md
docs/: README.txt  dependencies.md  git-cheatsheet.md  undefined-behavior.md
docs/.github/: README.md
include/: README.md  README.txt  document_types.hpp  global.h  global.hpp  init.hpp  lexicalize.h  lexicalize.hpp  node.h  node.hpp  tokenize.hpp  turtle.h  turtle.hpp
include/.github/: README.md
scripts/: README.txt  clean.sh  update-readmes.sh
scripts/.github/: README.md
src/: README.txt  global.cpp  init.cpp  lexicalize.cpp  main.cpp  node.cpp  tokenize.cpp  turtle.cpp
src/.github/: README.md
tests/: CMakeLists.txt
